# phone-management-service/src/main/resources/openapi/api-spec.yaml
@@ -12,7 +12,7 @@ paths:
     post:
       summary: Create a PhoneRecord
       description: Creates a new PhoneRecord with a name and phone number.
-      operationId: createPhoneRecord
+      operationId: addPhoneRecord
       requestBody:
         required: true
         content:
@@ -30,9 +30,9 @@ paths:
           description: Invalid input data
 
     get:
-      summary: Get all PhoneRecords
-      description: Retrieve a paginated list of all PhoneRecords.
-      operationId: getAllPhoneRecords
+      summary: Get paginated PhoneRecords
+      description: Retrieve a paginated list of PhoneRecords.
+      operationId: getPageablePhoneRecords
       parameters:
         - name: page
           in: query
@@ -72,6 +72,28 @@ paths:
         '400':
           description: Invalid query parameters
 
+  /phonerecords/all:
+    get:
+      summary: Get all PhoneRecords
+      description: Retrieve a list of all PhoneRecords.
+      operationId: getPhoneRecords
+      responses:
+        '200':
+          description: A list of PhoneRecords
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  total:
+                    type: integer
+                    description: Total number of PhoneRecords
+                  records:
+                    type: array
+                    items:
+                      $ref: '#/components/schemas/PhoneRecord'
+        '400':
+          description: Invalid query parameters
   /phonerecords/{id}:
     get:
       summary: Get a PhoneRecord by ID
